# lauyami-app

./: .gitignore  CLOUD_RUN_DEPLOYMENT_GUIDE.md  README.md  check_backend.sh
backend/: .dockerignore  .env.example  .prefectignore  CHANGELOG.md  Dockerfile  Makefile  README.md  cloudbuild_fastapi.yaml  deploy_fastapi.sh  ingest_tenancy_law.py  prefect-cloud.yaml  prefect-local.yaml  pyproject.toml  run-dev.sh
backend/modal_services/: natlas_asr.py  natlas_serve.py
backend/scripts/: clear_and_reingest.py  clear_session_collections.py
backend/src/: config.py
backend/src/api/: main.py
backend/src/api/middleware/: logging_middleware.py
backend/src/api/models/: api_models.py  provider_models.py
backend/src/api/routes/: agreement_routes.py  health_routes.py  report_routes.py  search_routes.py  tts_routes.py  voice_routes.py
backend/src/api/services/: asr_service.py  cache_service.py  document_storage_service.py  generation_service.py  legal_analysis_service.py  ocr_service.py  report_service.py  search_service.py  session_vectorstore_service.py  tts_service.py
backend/src/api/services/providers/: natlas_service.py
backend/src/api/services/providers/utils/: evaluation_metrics.py  prompts.py
backend/src/configs/: legal_documents.yaml
backend/src/infrastructure/qdrant/: create_collection.py  create_indexes.py  ingest_from_sql.py  qdrant_vectorstore.py
backend/src/infrastructure/supabase/: create_db.py  delete_db.py  init_session.py
backend/src/models/: article_models.py  document_models.py  sql_models.py  vectorstore_models.py
backend/src/pipelines/flows/: batch_document_ingestion_flow.py  document_ingestion_flow.py  embeddings_ingestion_flow.py
backend/src/pipelines/tasks/: extract_pdf.py  ingest_document.py  ingest_embeddings.py
backend/src/utils/: logger_util.py  text_splitter.py
backend/tests/integration/: test_db_connection.py
backend/tests/test_models/: test_sql_models.py
backend/tests/unit/: test_api_models.py  test_fastapi.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisDisplay.tsx  AudioPlayer.tsx  DemoSection.tsx  DownloadReportButton.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  LanguageSelector.tsx  LanguagesSection.tsx  ListenButton.tsx  Navbar.tsx  TweetCarousel.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useAgreementUpload.ts  useAgreementUploadStream.ts  useChat.ts  useVoiceQuery.ts
frontend/src/lib/: analysisParser.ts  api.ts  pdfGenerator.ts
frontend/src/pages/: AppPage.tsx  DemoPage.tsx  HowItWorksPage.tsx  Index.tsx  LanguagesPage.tsx
