[project]
name = "lauyami-project"
version = "1.0.0"
description = "AI-powered legal assistant for analyzing tenancy agreements using Lagos State Tenancy Law 2011"
authors = [
    {name = "Benito Martin"}
]
license = {text = "MIT License"}
requires-python = ">=3.12"

dependencies = [
    # Core web framework
    "fastapi[standard]>=0.116.1",
    "uvloop>=0.21.0",
    
    # HTTP client for API calls (Modal, YarnGPT)
    "httpx>=0.27.0",
    
    # Configuration & environment
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    
    # Vector database & embeddings
    "qdrant-client>=1.15.1",
    "fastembed>=0.7.2",
    
    # LLM integration
    "openai>=1.103.0",
    
    # Database (optional - if using Supabase)
    "supabase>=2.18.1",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    
    # Logging & monitoring
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    
    # Text processing
    "langchain-text-splitters>=0.3.9",
    
    # PDF processing (for document ingestion)
    "pypdf>=5.1.0",
    
    # Workflow orchestration (optional - if using Prefect)
    "prefect>=3.4.14",
]


[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]
lint = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
    "types-markdown>=3.9.0.20250906",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "responses>=0.25.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]

######################################
# --- Linting & Formatting Tools --- #
######################################

[tool.ruff]
# Assume Python 3.12
target-version = "py312"

# Same as Black.
line-length = 100
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Whether to show an enumeration of all fixed lint violations
show-fixes = true

# Enable common lint rules.
lint.select = [
  "B",    # flake8-bugbear
  "E",    # pycodestyle
  "F",    # Pyflakes1
  "I",    # isort
  "SIM",  # similarity
  "UP",   # pyupgrade
  "D102", # docstring method
  "D103", # docstring function
  "D414", # docstring missing section
  "D419", # empty docstring
#   "D101", # docstring missing class
]

lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

[tool.ruff.lint.mccabe]
# Maximum allowed McCabe complexity.
max-complexity = 10


[tool.mypy]
# Use `packages` to specify the package root
packages = ["src"]
explicit_package_bases = true

# All other configurations
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
# warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = false
strict_optional = true


[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
addopts = "-ra -v -s"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
